--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon index.js",
+        "dev": "NODE_ENV=development nodemon index.js --ignore 'data/stocks.json'",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
@@ -11,7 +11,8 @@
     "description": "",
     "dependencies": {
         "axios": "^1.6.8",
-        "express": "^4.19.2"
+        "express": "^4.19.2",
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
