refresh interval updates added

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,8 @@ backend/package-lock.json
 backend/data/stocks.json
 backend/plan.txt
 
-frontend/
+frontend/node_modules
+frontend/dist
+frontend/package-lock.json
+
+
