--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "dependencies": {
         "axios": "^1.6.8",
         "express": "^4.19.2",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "socket.io": "^4.7.5"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
