--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ backend/node_modules
 backend/package-lock.json
 backend/data/stocks.json
 backend/plan.txt
+backend/.env
 
 frontend/node_modules
 frontend/dist
