--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,2 @@
-backend/node_modules
-backend/package-lock.json
-backend/data/stocks.json
-backend/plan.txt
-backend/.env
-
-frontend/node_modules
-frontend/dist
-frontend/package-lock.json
-
-
+node_modules
+package-lock.json
